# Warehouse-GatePass

./: README.md  analysis_options.yaml  gatepass.db  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/kotlin/com/example/my_flutter_app/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
lib/: main.dart
lib/src/config/: api_config.dart
lib/src/models/: company.dart  gatepass.dart  party.dart  user.dart  warehouse.dart
lib/src/services/: database_service.dart  export_service.dart  import_service.dart  print_service.dart  session_service.dart  sync_service.dart
lib/src/views/dialogs/: user_setup_dialog.dart  warehouse_setup_dialog.dart
lib/src/views/screens/: company_management_screen.dart  gatepass_form_screen.dart  grades_screen.dart  history_screen.dart  home_screen.dart  login_screen.dart  master_upload_screen.dart  party_management_screen.dart  product_grade_screen.dart  settings_screen.dart  warehouse_management_screen.dart
lib/src/widgets/: brand_header.dart  branding_widgets.dart
test/: widget_test.dart
